Pdf and invoice done

--- a/sportsio/templates/admin_side/base.html
+++ b/sportsio/templates/admin_side/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Modernize Free</title>
+  <title>{%block title%}Admin | Sportsio{%endblock%}</title>
   <link rel="shortcut icon" type="image/png" href="{% static 'assets/admin_side/images/logos/favicon.png' %}" />
   <link rel="stylesheet" href="{% static 'assets/admin_side/css/styles.min.css' %}" />
 </head>
@@ -19,7 +19,7 @@
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
-          <a href="./index.html" class="text-nowrap logo-img">
+          <a href="{% url 'dashboard'%}" class="text-nowrap logo-img">
             <img src="{% static 'assets/admin_side/images/logos/dark-logo.png' %}" width="180" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
