--- a/sportsio/templates/user_side/edit_address.html
+++ b/sportsio/templates/user_side/edit_address.html
@@ -1,5 +1,5 @@
 {% extends 'user_side/base.html'%}
-
+{%block title%}Manage Address | Sportsio{%endblock%}
 {% block content %}
 <div style="width: 50%; margin: auto;  padding: 80px;">
   <span>Manage Address</span>
