--- a/sportsio/templates/user_side/product-view.html
+++ b/sportsio/templates/user_side/product-view.html
@@ -1,4 +1,5 @@
 {% extends 'user_side/base.html'%}
+{%block title%}Product View | Sportsio{%endblock%}
 {% block content %}        
 {% load humanize %}
         
