--- a/sportsio/templates/user_side/base.html
+++ b/sportsio/templates/user_side/base.html
@@ -7,7 +7,7 @@
    
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Uren - Car Accessories Shop HTML Template</title>
+    <title>{%block title%}Home | Sportsio{%endblock%}</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
