--- a/sportsio/templates/user_side/order_confirmed.html
+++ b/sportsio/templates/user_side/order_confirmed.html
@@ -1,4 +1,5 @@
 {% extends "user_side/base.html"%}
+{%block title%}Order Confirmed | Sportsio{%endblock%}
 {% block content %}
 <!-- Add this line in the head section of your HTML document -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
