--- a/sportsio/templates/user_side/product_list.html
+++ b/sportsio/templates/user_side/product_list.html
@@ -1,4 +1,5 @@
 {% extends "user_side/base.html"%}
+{%block title%}Products | Sportsio{%endblock%}
 {% block content %}
 {% load humanize%}
 <style>
