--- a/sportsio/templates/user_side/base.html
+++ b/sportsio/templates/user_side/base.html
@@ -41,6 +41,9 @@
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
+    <!-- Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Vendor & Plugins CSS (Please remove the comment from below vendor.min.css & plugins.min.css for better website load performance and remove css files from the above) -->
     <!--
     <script src="assets/js/vendor/vendor.min.js"></script>
@@ -140,21 +143,17 @@
                         <div class="custom-category_col col-12">
 
                             <!-- Shop By Category Start Here-->
-
-                            <div class="category-menu category-menu-hidden">
+                            <a href="{% url "user_side:shopbycat"%}">
+                            <div class="category-menu">
                                 <div class="category-heading">
                                     <h2 class="categories-toggle">
                                         <span>Shop By</span>
                                         <span>Category</span>
                                     </h2>
                                 </div>
-                                <div id="cate-toggle" class="category-menu-list">
-                                    {% for cat in Category %}
-                                        <li class="right-menu"><a href="shop-left-sidebar.html">{{ cat.name }}</a>
-                                    {% endfor %}
-                                </div>
                             </div>
                         </div>
+                    </a>
                         <div class="custom-menu_col col-12 d-none d-lg-block">
                             <div class="main-menu_area position-relative">
                                 <nav class="main-nav">
