--- a/sportsio/templates/user_side/product_list.html
+++ b/sportsio/templates/user_side/product_list.html
@@ -30,21 +30,20 @@
             <div class="col-lg-12">
                 <div class="shop-toolbar">
                     {% if not advnced%}
-                <form method="get" action="{% url 'user_side:sort' %}">
+                <form method="get" action="{% url 'user_side:product_list' %}">
                     <div class="product-item-selection_area">
                         <div class="product-short">
-                            <label class="select-label">Short By:</label>
-                            <select class="myniceselect nice-select" name="sort_by">
-                                <option value="">Default</option>
-                                <option value="a-z">Name, A to Z</option>
-                                <option value="z-a">Name, Z to A</option>
-                                <option value="price-">Price, low to high</option>
-                                <option value="price+">Price, high to low</option>
-                                <option value="rating+">Rating (Highest)</option> <!-- To do rating sort-->
-                                <option value="rating-">Rating (Lowest)</option>
+                            <label class="select-label">Sort By:</label>
+                            <select class="myniceselect nice-select" name="sort_by" onchange="this.form.submit()">
+                                <option value="" {% if sort_by == "" %}selected{% endif %}>Default</option>
+                                <option value="a-z" {% if sort_by == "a-z" %}selected{% endif %}>Name, A to Z</option>
+                                <option value="z-a" {% if sort_by == "z-a" %}selected{% endif %}>Name, Z to A</option>
+                                <option value="price-" {% if sort_by == "price-" %}selected{% endif %}>Price, low to high</option>
+                                <option value="price+" {% if sort_by == "price+" %}selected{% endif %}>Price, high to low</option>
+                                <option value="rating+" {% if sort_by == "rating+" %}selected{% endif %}>Rating (Highest)</option>
+                                <option value="rating-" {% if sort_by == "rating-" %}selected{% endif %}>Rating (Lowest)</option>
                             </select>
                         </div>
-                            <button class="btn btn-sm btn-warning" type="submit">Sort</button>
                         </div>
                         </form>
                     
@@ -139,16 +138,35 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <ul class="uren-pagination-box primary-color">
-                                        <li class="active"><a href="javascript:void(0)">1</a></li>
-                                        <li><a href="javascript:void(0)">2</a></li>
-                                        <li><a href="javascript:void(0)">3</a></li>
-                                        <li><a href="javascript:void(0)">4</a></li>
-                                        <li><a href="javascript:void(0)">5</a></li>
-                                        <li><a class="Next" href="javascript:void(0)">Next</a></li>
+                                        <!-- Previous Page Link -->
+                                        {% if product.has_previous %}
+                                            <li><a href="?page={{ product.previous_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}">&laquo; Previous</a></li>
+                                        {% else %}
+                                            <li class="disabled"><a href="javascript:void(0)">&laquo; Previous</a></li>
+                                        {% endif %}
+                                        
+                                        <!-- Page Numbers -->
+                                        {% for page_num in product.paginator.page_range %}
+                                            {% if product.number == page_num %}
+                                                <li class="active"><a href="javascript:void(0)">{{ page_num }}</a></li>
+                                            {% else %}
+                                                <li><a href="?page={{ page_num }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}">{{ page_num }}</a></li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        
+                                        <!-- Next Page Link -->
+                                        {% if product.has_next %}
+                                            <li><a class="Next" href="?page={{ product.next_page_number }}{% if sort_by %}&sort_by={{ sort_by }}{% endif %}">Next &raquo;</a></li>
+                                        {% else %}
+                                            <li class="disabled"><a href="javascript:void(0)">Next &raquo;</a></li>
+                                        {% endif %}
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                
                     </div>
                 </div>
             </div>
