--- a/sportsio/templates/user_side/shop_category.html
+++ b/sportsio/templates/user_side/shop_category.html
@@ -321,11 +321,21 @@
 {% if messages %}
 <script>
     document.addEventListener("DOMContentLoaded", function(event) {
-        toastr.options = { "closeButton": false, "debug": false, "newestOnTop": true,
-            "progressBar": true, "positionClass": "toast-top-right", "preventDuplicates": true,
-            "onclick": null, "showDuration": "300", "hideDuration": "1000", "timeOut": "5000",
-            "extendedTimeOut": "1000", "showEasing": "swing", "hideEasing": "linear",
-            "showMethod": "fadeIn", "hideMethod": "fadeOut" };
+        toastr.options = {  "closeButton": true,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": true,
+        "positionClass": "toast-bottom-right",
+        "preventDuplicates": true,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut" };
         {% autoescape on %}
             {% for msg in messages %}
                 toastr.{{ msg.level_tag }}("{{ msg }}");
